--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "watch": "nodemon . -e js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "lowdb": "^1.0.0"
   },
