--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "main": "src/server.js",
   "license": "MIT",
+  "author": "Alexandre SAUNER",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alexandre-snr/shorturl"
+  },
   "scripts": {
     "start": "node .",
     "watch": "nodemon . -e js"
