--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
+    "proper-lockfile": "^4.1.2",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
